--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -9,6 +9,7 @@
     "import csv\n",
     "import pandas as pd\n",
     "import json\n",
+    "import numpy as np\n",
     "import datetime\n",
     "import os"
    ]
@@ -1966,21 +1967,21 @@
        "      <td>Both</td>\n",
        "      <td>La casa de papel</td>\n",
        "      <td>608.63</td>\n",
-       "      <td>0.520163</td>\n",
+       "      <td>0.515388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Both</td>\n",
        "      <td>Le jeu de la dame</td>\n",
        "      <td>387.48</td>\n",
-       "      <td>0.029383</td>\n",
+       "      <td>0.140845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Both</td>\n",
        "      <td>Le Nouveau stagiaire</td>\n",
        "      <td>120.75</td>\n",
-       "      <td>0.488911</td>\n",
+       "      <td>0.491537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2008,35 +2009,35 @@
        "      <td>Tarik</td>\n",
        "      <td>Merci patron!</td>\n",
        "      <td>81.78</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.881579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>121</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>Les Evadés</td>\n",
        "      <td>138.18</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.881579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>122</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>Snowden</td>\n",
        "      <td>130.65</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.881579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>Breaking Bad</td>\n",
        "      <td>2979.49</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.881579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>124</th>\n",
        "      <td>Tarik</td>\n",
        "      <td>13 Novembre</td>\n",
        "      <td>158.73</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.881579</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2045,17 +2046,17 @@
       ],
       "text/plain": [
        "    Profile                 Title  Duration  ColorLevel\n",
-       "0      Both      La casa de papel    608.63    0.520163\n",
-       "1      Both     Le jeu de la dame    387.48    0.029383\n",
-       "2      Both  Le Nouveau stagiaire    120.75    0.488911\n",
+       "0      Both      La casa de papel    608.63    0.515388\n",
+       "1      Both     Le jeu de la dame    387.48    0.140845\n",
+       "2      Both  Le Nouveau stagiaire    120.75    0.491537\n",
        "3      Both             Blacklist   5658.81    0.500000\n",
        "4      Both          Las Vegas 21    121.83    0.500000\n",
        "..      ...                   ...       ...         ...\n",
-       "120   Tarik         Merci patron!     81.78    1.000000\n",
-       "121   Tarik            Les Evadés    138.18    1.000000\n",
-       "122   Tarik               Snowden    130.65    1.000000\n",
-       "123   Tarik          Breaking Bad   2979.49    1.000000\n",
-       "124   Tarik          13 Novembre     158.73    1.000000\n",
+       "120   Tarik         Merci patron!     81.78    0.881579\n",
+       "121   Tarik            Les Evadés    138.18    0.881579\n",
+       "122   Tarik               Snowden    130.65    0.881579\n",
+       "123   Tarik          Breaking Bad   2979.49    0.881579\n",
+       "124   Tarik          13 Novembre     158.73    0.881579\n",
        "\n",
        "[125 rows x 4 columns]"
       ]
@@ -2095,7 +2096,9 @@
     "        else:\n",
     "            color_level.append(0.5)\n",
     "\n",
-    "temp.insert(3, \"ColorLevel\", color_level)\n",
+    "v = np.array(color_level) - 0.5\n",
+    "normalized_v = v/(np.linalg.norm(v)/4) + 0.5\n",
+    "temp.insert(3, \"ColorLevel\", normalized_v)\n",
     "temp"
    ]
   },
